# BattleSheepSolver

./: Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml
documentation/: guide.md  implreport.md  specification.md  testreport.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: board.rs  lib.rs  main.rs  tests.rs
