[package]
name = "battle_sheep_solver"
version = "0.1.0"
edition = "2021"
default-run = "battle_sheep_solver"

[dependencies]
rayon = "1.8.0"
either = "1.9.0"
next-gen = "0.0.10"

# Gui-only dependencies
eframe = "0.23.0"
egui_extras = { version = "0.23.0", features = ["image"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
once_cell = "1.18.0"
